fix (config): small adjusts

--- a/_posts/2014-07-16-project-3.markdown
+++ b/_posts/2014-07-16-project-3.markdown
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Tutorials
+title: First Access
 modal-id: 3
 img: circus.png
-url: docs/
+url: first/
 description: Documentation of the project.
 ---
