--- a/_posts/2014-07-17-project-2.markdown
+++ b/_posts/2014-07-17-project-2.markdown
@@ -4,6 +4,6 @@ title: Authoring Space
 modal-id: 2
 img: cabin.png
 alt: image-alt
-url: author/
+url: https://harena.ds4h.org/space/author/
 description: Authoring space where you can create clinical cases.
 ---
