--- a/_posts/2014-07-16-project-3.markdown
+++ b/_posts/2014-07-16-project-3.markdown
@@ -3,6 +3,6 @@ layout: default
 title: First Access
 modal-id: 3
 img: circus.png
-url: first
+application: first
 description: Documentation of the project.
 ---
