--- a/_posts/2014-07-18-project-1.markdown
+++ b/_posts/2014-07-18-project-1.markdown
@@ -4,7 +4,7 @@ title: Learning Space
 modal-id: 1
 img: submarine.png
 alt: image-alt
-url: player
+application: player
 category: Learning Space
 description: Learning space where you can solve clinical cases.
 ---
